[gd_scene load_steps=2 format=3 uid="uid://blln2a1ba7gge"]

[ext_resource type="Script" path="res://scripts/left_panel.gd" id="1_5i12m"]

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
script = ExtResource("1_5i12m")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
theme_override_colors/font_pressed_color = Color(0.720467, 0.720468, 0.720467, 1)
text = "К проектам"
flat = true
alignment = 0

[node name="MenuButton" type="MenuButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
text = "Locales
"
flat = false
item_count = 3
popup/item_0/text = "en"
popup/item_0/id = 0
popup/item_1/text = "ru"
popup/item_1/id = 1
popup/item_2/text = "fr"
popup/item_2/id = 2

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Экспорт проекта"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
focus_mode = 0
text = "Назад"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_proj_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
